--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ charset-normalizer==3.4.3
 click==8.3.0
 colorama==0.4.6
 defusedxml==0.7.1
-Django==5.2.6
+django>=5.2.7
 django-cors-headers==4.9.0
 django-environ==0.12.0
 django-extensions==4.1
